# calipy

./: .gitignore  LICENSE.md  LICENSES_THIRD_PARTY.md  README.md  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/api/: effects_overview.rst.txt  tensor_overview.rst.txt
api/: api_summary_overview.html  data.html  data_overview.html  funs.html  primitives_overview.html  tensor.html
calipy/: __init__.py  base.py  data.py  effects.py  funs.py  illustrator.py  primitives.py  setup.py  tensor.py  utils.py
calipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
calipy/core/: __init__.py  base.py  calipy_setup_constraints.py  calipy_setup_data.py  calipy_setup_effects.py  calipy_setup_instruments.py  calipy_setup_optimizer.py  calipy_setup_probmodel.py  calipy_setup_utils.py  components.py  dag.py  data.py  effects.py  funs.py  illustrator.py  instruments.py  primitives.py  probmodel.py  tensor.py  utils.py
calipy/docs/: Codesnippets_for_screenshot.py  howto_shortscript
calipy/examples/: Digraph.gv  Examples_all_functionality.py  calipy_demo_0.py  calipy_demo_1.py  calipy_demo_2.py  calipy_demo_3.py  calipy_demo_4.py  calipy_tutorial_1.py  simple_measurement_tape_probmodel.py  simple_tape_measure_probmodel.py  simple_timeseries_probmodel.py  (+25 more)
docs/: Installation_guide  howto_shortscript
examples/: Examples_all_functionality.py  __init__.py  calipy_demo_0.py  calipy_demo_1.py  calipy_demo_2.py  calipy_demo_3.py  calipy_demo_4.py  calipy_demo_latent_variables_1.py  calipy_tutorial_1.py  simple_tape_measure_probmodel.py  simple_tape_measure_probmodel_with_nodestructure.py  simple_two_observation_probmodel_with_nodestructure.py
explanations/: CalipyNode_explanations.html
(+81 files in other folders)
